Improved responsiveness over phone's screens

--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -38,3 +38,11 @@
   border: none;
   cursor: pointer;
 }
+
+@media screen and (max-width: 430px) {
+  .popup-inner .close-btn {
+    position: absolute;
+    top: 0;
+    right: 10%;
+  }
+}
