--- a/src/components/card.css
+++ b/src/components/card.css
@@ -127,8 +127,11 @@
 
 @media screen and (max-width: 430px) {
   .card-right-container {
-    padding: 1rem;
+    padding: 0.5rem;
     margin-bottom: 2rem;
-    gap: 0.4rem;
+    gap: 0.3rem;
+  }
+  .input {
+    width: 8rem;
   }
 }
