--- a/src/components/header.css
+++ b/src/components/header.css
@@ -36,10 +36,16 @@
   background: url(../assets/plus.png);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 42px;
-  width: 42px;
+  height: 40px;
+  width: 40px;
   border: none;
   cursor: pointer;
+}
+
+.searchbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Responsiveness */
@@ -64,19 +70,30 @@
   .header-container {
     display: flex;
     flex-direction: column;
-    height: 23vh;
+    height: 20vh;
   }
   .header-title {
     font-size: 2rem;
+    margin-bottom: -0.3rem;
   }
-  .addbtn {
-    position: relative;
-    left: 40%;
-    bottom: 53px;
+  .searchbar-container {
+    margin-bottom: 2.2rem;
   }
 }
 @media screen and (max-width: 430px) {
   .search-box {
-    width: 14rem;
+    width: 12rem;
+    font-size: 1.1rem;
+  }
+  .searchbar-container {
+    margin-bottom: 2.2rem;
+  }
+  .header-title {
+    font-size: 1.7rem;
+    margin-bottom: -0.1rem;
+  }
+  .addbtn {
+    height: 33px;
+    width: 33px;
   }
 }
